# Projeto-AED

./: .gitignore  CMakeLists.txt  README.md
CoroteSort/include/: extra_func.h
CoroteSort/scripts/: run.sh
CoroteSort/src/: main.cpp
JogoDaVelha/: CMakeLists.txt  TODO.md
JogoDaVelha/include/: ai.h  input.h  logic.h  render.h
JogoDaVelha/src/: ai.c  input.c  logic.c  main.c  render.c
include/: cores.h  extra_func.h  frasco.h  pilha.h
jogo_da_velha/: CMakeLists.txt  TODO.md
jogo_da_velha/include/: ai.h  input.h  logic.h  render.h
relatórios/: relatorio_1.docx  relatorio_2.docx
src/: main.cpp
